--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
-    <title>MusaabK99</title>
+    <title>hichem</title>
   </head>
   <body>
     <div class="container"></div>
@@ -20,20 +20,20 @@
     <hr />
 
     <section class="hero">
-      <img class="arrow" src="assets/svg/arrow.svg" alt="arrow" />
+      <img class="arrow" src="assets/svg/curved-arrow.png" width="80px" height="200px" alt="arrow" />
       <div class="heroSub">
         <h1 class="name">I’m hichem</h1>
-        <h1 class="title">Software Engineer</h1>
+        <h1 class="title">welcom to my web site</h1>
         <div class="heroBtns">
           <a class="hireMe" href="#contactMe">Hire me</a>
         </div>
       </div>
-      <img src="assets/svg/Hero.svg" alt="hero image" class="heroImg" />
+      <img src="assets/svg/superhero.png"  width="300PX" alt="hero image" class="heroImg" />
     </section>
 
     <section class="aboutMe" id="aboutMe">
       <img
-        src="assets/svg/AboutMe.svg"
+        src="assets/svg/walking-man.png"
         alt="aboutMe image"
         class="aboutMeImg"
       />
@@ -41,7 +41,7 @@
         <div class="textTitle">
           <h1 class="aboutName">About</h1>
           <h1 class="aboutTitle">me</h1>
-          <img src="assets/svg/lightublb.svg" alt="ligh" class="light" />
+          <img src="assets/svg/light-bulb.png" width="100PX" alt="ligh" class="light" />
         </div>
         <p class="aboutMePar">
           Hey, I'm hichem, a Software Engineer i had created this website to show my services .
@@ -58,7 +58,7 @@
         <ul>
           <li>
             <a href=""
-              ><img src="assets/imgs/landingPage.png" alt="landing Page"
+              ><img src="assets/imgs/landing-Page.png" width="50px" alt="landing Page"
             /></a>
           </li>
           <li>
